Fixed css Safari

--- a/html/controller-test.html
+++ b/html/controller-test.html
@@ -8,14 +8,15 @@
         div {
             padding: 20px;
             margin: 20px;
-            width: 200px;
-            height: 200px;
+            min-width: 200px;
+            min-height: 200px;
             max-width: 200px;
             max-height: 200px;
             overflow: hidden;
             display: inline-block;
             border: 1px solid black;
             background-color: antiquewhite;
+            vertical-align: top;
         }
         a {
             border: 1px solid black;
