Added gulp build and usable js

--- a/html/controller-test.html
+++ b/html/controller-test.html
@@ -56,14 +56,7 @@
 
 <ul id="viewD"></ul>
 
-<script type="text/javascript" src="../scripts/Routing/route-manager.js"></script>
-<script type="text/javascript" src="../scripts/Routing/hash-parser.js"></script>
-<script type="text/javascript" src="../scripts/Routing/route.js"></script>
-<script type="text/javascript" src="../scripts/Meta/function-parser.js"></script>
-<script type="text/javascript" src="../scripts/Meta/annotation-info.js"></script>
-<script type="text/javascript" src="../scripts/Meta/annotation.js"></script>
-<script type="text/javascript" src="../scripts/Meta/annotated.js"></script>
-<script type="text/javascript" src="../scripts/Routing/Annotations/route.js"></script>
+<script type="text/javascript" src="../routing.js"></script>
 <script type="text/javascript" src="controller-test.js"></script>
 </body>
 </html>
