Added min lib to html

--- a/html/routing-test.html
+++ b/html/routing-test.html
@@ -6,9 +6,7 @@
 </head>
 <body>
 
-<script type="text/javascript" src="../scripts/Routing/route-manager.js"></script>
-<script type="text/javascript" src="../scripts/Routing/hash-parser.js"></script>
-<script type="text/javascript" src="../scripts/Routing/route.js"></script>
+<script type="text/javascript" src="../routing.js"></script>
 <script type="text/javascript" src="routing-test.js"></script>
 </body>
 </html>
