Refactored + RouteManager.setHash(hash:string, silent:boolean)

--- a/html/controller-test.html
+++ b/html/controller-test.html
@@ -39,10 +39,13 @@
 
 <br>
 <a href="#RouteA">Route A</a>
+<a onclick="Routing.RouteManager.setHash('#RouteA', true);">Set Route A silent</a>
 <a href="#Ctrl/b/1/2">Route B optional parameter filled</a>
 <a href="#Ctrl/b/1">Route B optional parameter empty</a>
-<a href="#None">Miss all routes</a><br>
+<a href="#None">Miss all routes</a>
 <br>
+<br>
+
 
 <div id="viewA">
     This is view A
